--- a/arch/arm/configs/som60_rdvk_defconfig
+++ b/arch/arm/configs/som60_rdvk_defconfig
@@ -239,6 +239,9 @@ CONFIG_LRDMWL_USB=m
 CONFIG_MWIFIEX=m
 CONFIG_MWIFIEX_SDIO=m
 CONFIG_MWIFIEX_USB=m
+CONFIG_LRD_WIFI_75=m
+CONFIG_LRD_WIFI_75_UAP_SUPPORT=y
+CONFIG_LRD_WIFI_75_WIFI_DIRECT_SUPPORT=y
 # CONFIG_WLAN_VENDOR_MEDIATEK is not set
 # CONFIG_WLAN_VENDOR_RALINK is not set
 # CONFIG_WLAN_VENDOR_REALTEK is not set
