--- a/drivers/net/wireless/laird/Makefile
+++ b/drivers/net/wireless/laird/Makefile
@@ -1,2 +1,3 @@
 obj-$(CONFIG_LRDMWL)		+= lrdmwl/
 obj-$(CONFIG_LRD_MWIFIEX)	+= mwifiex/mxm_wifiex/wlan_src/
+obj-$(CONFIG_LRD_WIFI_75)	+= iw612/wlan_src/
